--- a/_layouts/assignment.html
+++ b/_layouts/assignment.html
@@ -13,7 +13,7 @@ title: page.title
     {% if page.due_event %}
     <span style="font-weight: bold">Due Date: {{ page.due_event.date | date:site.dateformat }}</span>
     {% endif %}
-    <p style="font-weight: bold">Download
+    <p style="font-weight: bold">Downloads
       {% if page.pdf %}
       [<a href="{{ page.pdf | prepend: site.baseurl }}">problems</a>]
       {% endif %}
