--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
 
 {% endif %}
 
-          {% if site.twitter_username %}
+{% if site.twitter_username %}
   <li>
     <a href="https://twitter.com/{{ site.twitter_username }}">
       <i class="fab fa-twitter" style="color:gray"></i> {{ site.twitter_username }}
@@ -27,7 +27,16 @@
   </li>
 {% endif %}
 
-          {% if site.google_scholar_id %}
+{% if site.email %}
+  <li>
+    <a href="mailto:{{ site.email }}">
+      <i class="fas fa-envelope" style="color:gray"></i> {{ site.email }}
+    </a>
+  </li>
+{% endif %}
+
+
+{% if site.google_scholar_id %}
   <li>
     <a href="https://scholar.google.com/citations?user={{ site.google_scholar_id }}">
       <i class="ai ai-google-scholar" style="color:gray"></i> {{ site.google_scholar_id }}
